Descubriendo funciones deprecated en el cliente MongoDB

--- a/01-Javascript/09_JSON.html
+++ b/01-Javascript/09_JSON.html
@@ -38,7 +38,11 @@ JSON
     {
         "id"        : "53",
         "nombre"    : "Ringo Starr",
-        "direccion" : "bbb",
+        "direccion" : {
+          "ciudad" :
+          "calle"  :
+          "numero" :
+        }
         "telefono"  : "cc"
     },
     {
@@ -48,6 +52,7 @@ JSON
         "telefono"  : "eee"
     }
 ]
+
 */
 
 let peliculas = [
