JQuery Gran Reserva

--- a/01-Javascript/15_JQuery_DHTML.html
+++ b/01-Javascript/15_JQuery_DHTML.html
@@ -91,10 +91,10 @@ function pruebas(){
     $("#lista").append("<li>List item 1</li>")
     $("#lista").append("<li>List item 2</li>")
     $("#lista").append("<li>List item 3</li>")
-    $("#lista").append("<li id='separador'>====================</li>")
-    $("#lista").append("<li>List item 4</li>")
-    $("#lista").append("<li>List item 5</li>")
-    $("#lista").append("<li>List item 6</li>")
+    $("#lista").append("<li id='separador'>====================</li>")    
+    $("<li>List item 4</li>").appendTo("#lista")
+    $("<li>List item 5</li>").appendTo("#lista")
+    $("<li>List item 6</li>").appendTo("#lista")
     
     //prepend y prependTo añaden al principio
     $("#lista").prepend("<li>PRIMERO</li>")
