--- a/01-Javascript/20_Bootstrap_4.html
+++ b/01-Javascript/20_Bootstrap_4.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
     <title>Insert title here</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
 
     <div class="jumbotron">
-        <h1>Ejemplo de Bootstrap <small>Pues muy bien</small></h1>
+        <h1>Ejemplo de Bootstrap 4 <small>Pues muy bien</small></h1>
     </div>
 
     <div class="row">
 
-        <div class="col-lg-2">
+        <div class="col-2">
             <ul>
                 <li><a href="#">Clientes</a></li>
                 <li><a href="#">Facturas</a></li>
@@ -29,51 +30,47 @@
                 <li><a href="#">Salir</a></li>
             </ul>
         </div>
-        <div class="col-lg-8">
+        <div class="col-8">
             <form action="#">
 
                 <div class="text-center">
+                    <!--
                     <div class="btn-group" >
+                    -->
                         <input type="submit" class="btn btn-success" value="Insertar"/>
                         <input type="submit" class="btn btn-success" value="Modificar"/>
                         <input type="submit" class="btn btn-success" value="Borrar"/>
                         <input type="reset"  class="btn btn-success" value="Vaciar"/>
+                    <!--
                     </div>
+                    -->
                 </div>
                     
                 <p></p>
 
-                <div class="form-horizontal">
-                    <!--
-                    Etiqueta
-                    [ CAMPO ]
-                    <div class="form-group">
-                        <label for="nombre">Nombre</label>
-                        <input class="form-control" type="text" name="nombre"/>
-                    </div>
-                    -->
-                    
-                    <div class="form-group">
-                        <label class="control-label col-xs-2" for="nombre">Nombre</label>
-                        <div class="col-xs-8">
+                <div>
+
+                    <div class="form-group row">
+                        <label class="col-2 col-form-label" for="nombre">Nombre</label>
+                        <div class="col-10">
                             <input type="text" name="Nombre" class="form-control" />
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label class="control-label col-xs-2" for="direccion">Dirección</label>
-                        <div class="col-xs-8">
+                    <div class="form-group row">
+                        <label class="col-2 col-form-label" for="direccion">Dirección</label>
+                        <div class="col-10">
                             <input type="text" name="direccion" class="form-control" />
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label class="control-label col-xs-2" for="telefono">Teléfono</label>
-                        <div class="col-xs-8">
+                    <div class="form-group row">
+                        <label class="col-2 col-form-label" for="telefono">Teléfono</label>
+                        <div class="col-10">
                             <input type="text" name="telefono" class="form-control" />
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label class="control-label col-xs-2" for="correoE">Correo E</label>
-                        <div class="col-xs-8">
+                    <div class="form-group row">
+                        <label class="col-2 col-form-label" for="correoE">Correo E</label>
+                        <div class="col-10">
                             <input type="text" name="coreroE" class="form-control" />
                         </div>
                     </div>
@@ -135,7 +132,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="col-lg-2">
+        <div class="col-2">
             <ul>
                 <li><a href="#">Otras</a></li>
                 <li><a href="#">Movidas</a></li>
