--- a/01-Javascript/20_Bootstrap_4.html
+++ b/01-Javascript/20_Bootstrap_4.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body>
+<body onload="crearProductos()">
 
     <div class="jumbotron">
         <h1>Ejemplo de Bootstrap 4 <small>Pues muy bien</small></h1>
@@ -30,12 +30,14 @@
                 <li><a href="#">Salir</a></li>
             </ul>
         </div>
+        
+        <!-- offset-2 -->
         <div class="col-8">
             <form action="#">
 
                 <div class="text-center">
                     <!--
-                    <div class="btn-group" >
+                        <div class="btn-group" >
                     -->
                         <input type="submit" class="btn btn-success" value="Insertar"/>
                         <input type="submit" class="btn btn-success" value="Modificar"/>
