Yo pensaba que JS era mi amigo y me revento la cabeza con un bate de baseball

--- a/02-NodeJS/04_REST/recursos/formularioDiscos.html
+++ b/02-NodeJS/04_REST/recursos/formularioDiscos.html
@@ -45,7 +45,7 @@
         <button id="btnInsertar"  class="btn btn-primary mr-1">Insertar</button>
         <button id="btnModificar" class="btn btn-primary mr-1">Modificar</button>
         <button id="btnBorrar"    class="btn btn-danger  mr-1">Borrar</button>
-        <button id="btnVaciar"    class="btn btn-warning mr-1">Vaciar</button>
+        <button id="ksbtnVaciar"    class="btn btn-warning mr-1">Vaciar</button>
         <button id="btnVolver"    class="btn btn-warning mr-1">Volver</button>
     </div>
     
