--- a/02-NodeJS/04_REST/recursos/listadoDiscos.html
+++ b/02-NodeJS/04_REST/recursos/listadoDiscos.html
@@ -61,7 +61,7 @@
                         <th>Año</th>
                     </tr>
                 </thead>
-                <tbody id="tablaPeliculas"></tbody>
+                <tbody id="tablaDiscos"></tbody>
             </table>            
 
         </div>
