Yo pensaba que JS era mi amigo y me revento la cabeza con un bate de baseball

--- a/02-NodeJS/04_REST/recursos/listadoDiscos.html
+++ b/02-NodeJS/04_REST/recursos/listadoDiscos.html
@@ -17,6 +17,7 @@
 <body>
     
     <div class="text-center page-header">
+        <img src="pinguinos.jpg"/>
         <h2 class="mt-4 mb-4">Aplicación de gestion de discos GestDiscos 3000</h2>
     </div>   
 
