--- a/02-NodeJS/04_REST/recursos/listadoDiscos.html
+++ b/02-NodeJS/04_REST/recursos/listadoDiscos.html
@@ -11,10 +11,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
     <script src="./listadoDiscos.js" type="application/javascript"></script>
-
 </head>
 
 <body>
+
+    <div id="borrar"></div>
+
     
     <div class="text-center page-header">
         <img src="pinguinos.jpg"/>
