--- a/02-NodeJS/04_REST/recursos/listadoDiscos.html
+++ b/02-NodeJS/04_REST/recursos/listadoDiscos.html
@@ -14,9 +14,6 @@
 </head>
 
 <body>
-
-    <div id="borrar"></div>
-
     
     <div class="text-center page-header">
         <img src="pinguinos.jpg"/>
@@ -59,9 +56,9 @@
                 <thead>
                     <tr>
                         <th>Título</th>
-                        <th>Director</th>
-                        <th>Género</th>
+                        <th>Grupo</th>
                         <th>Año</th>
+                        <th>Discográfica</th>
                     </tr>
                 </thead>
                 <tbody id="tablaDiscos"></tbody>
