--- a/02-NodeJS/03_ServidorWeb/recursos/ejemploRutas/pagina1.html
+++ b/02-NodeJS/03_ServidorWeb/recursos/ejemploRutas/pagina1.html
@@ -8,10 +8,6 @@
     <title>Document</title>
 </head>
 
-<script>
-    saludar()
-</script>
-
 <body>
 
     <h1>
@@ -25,13 +21,13 @@
     Ruta relativa <a href="./pagina2.html">Página 2</a><br/>
     Ruta absoluta <a href="/ejemploRutas/pagina2.html">Página 2</a><br/>
     Ruta completa <a href="http://localhost:2000/ejemploRutas/pagina2.html">Página 2</a><br/>
+    <a href="http://www.google.es/index.html">google</a>
     
     <h2>Página 3</h2>
     Ruta relativa <a href="movida/pagina3.html">Página 3</a><br/>
     Ruta relativa <a href="./movida/pagina3.html">Página 3</a><br/>
     Ruta absoluta <a href="/ejemploRutas/movida/pagina3.html">Página 3</a><br/>
     Ruta completa <a href="http://localhost:2000/ejemploRutas/movida/pagina3.html">Página 3</a><br/>
-
 
 </body>
 </html>
