--- a/07_Socket_IO/servidor/recursos/cliente.html
+++ b/07_Socket_IO/servidor/recursos/cliente.html
@@ -2,13 +2,90 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+    <title>Chat</title>
     
-    <marquee><h1><font color="lightGreen">HOLA</font></h1></marquee>
+    <!--Librería socket.io para el navegador-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.3/socket.io.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+            crossorigin="anonymous"></script>        
+    
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>    
+    <link rel="stylesheet" 
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
+            crossorigin="anonymous"> 
+</head>
+
+<script type="application/javascript">
+
+</script>
+
+<body>
+
+    <div class="container-fluid">
+
+        <div class="jumbotron">
+            <h1>Chat 3000</h1>
+        </div>
+
+        <div class="row">
+            <div class="col-7 offset-1">
+                <div class="card mt-2">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-2">
+                                Alias
+                            </div>
+                            <div class="col-7">
+                                <input type="text" id="alias" class="form-control"/>
+                            </div>
+                            <div class="col-3">
+                                <button id="btnConectar"    class="btn btn-primary btn-block">Conectar</button>
+                                <button id="btnDesconectar" class="btn btn-warning btn-block">Desconectar</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card mt-2">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-2">
+                                Mensaje
+                            </div>
+                            <div class="col-7">
+                                <textarea id="mensaje" class="form-control"></textarea>
+                            </div>
+                            <div class="col-3">
+                                <button id="btnEnviar" class="btn btn-primary btn-block">Enviar</button>
+                            </div>
+                        </div>                
+                    </div>
+                </div>
+                <div class="card mt-2">
+                    <div class="card-header">
+                        Mensajes
+                    </div>                
+                    <div class="card-body">
+                        <div id="mensajes"></div>
+                    </div>
+                </div>
+            </div>        
+            <div class="col-3">
+                <div class="card mt-2">
+                    <div class="card-header">
+                        Participantes
+                    </div>
+                    <div class="card-body">
+                        <div>
+                            <ul id="usuarios"></ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
 
 </body>
 </html>
