--- a/07_Socket_IO/servidor/recursos/cliente.html
+++ b/07_Socket_IO/servidor/recursos/cliente.html
@@ -24,9 +24,17 @@
 
     <div class="container-fluid">
 
-        <div class="jumbotron">
+        <div>
             <h1>Chat 3000</h1>
         </div>
+
+        <div class="navbar navbar-expand-sm bg-dark navbar-dark">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                </li>
+            </ul>
+        </div>        
+
 
         <div class="row">
             <div class="col-7 offset-1">
