--- a/07_Socket_IO/servidor_habitaciones/recursos/cliente.html
+++ b/07_Socket_IO/servidor_habitaciones/recursos/cliente.html
@@ -89,6 +89,14 @@
                         </div>
                     </div>
                 </div>
+                <div class="card mt-2">
+                    <div class="card-header">
+                        Salas
+                    </div>
+                    <div class="card-body">
+                        <div id="salas"></div>
+                    </div>
+                </div>                  
             </div>
         </div>
 
