Conectando con Realm y usuarios anemonemonas

--- a/08_MongoDB_Realm/01_Cliente_JS/agenda.html
+++ b/08_MongoDB_Realm/01_Cliente_JS/agenda.html
@@ -49,28 +49,28 @@
                         <label>Nombre</label>
                     </div>
                     <div class="col-10 mt-1">
-                        <input class="form-control" campo="" id="nombre"/>
+                        <input type="text" class="form-control" campo="" id="nombre"/>
                     </div>
 
                     <div class="col-2 mt-1">
                         <label>Direccion</label>
                     </div>
                     <div class="col-10 mt-1">
-                        <input class="form-control" campo="" id="direccion"/>
+                        <input type="text" class="form-control" campo="" id="direccion"/>
                     </div>
 
                     <div class="col-2 mt-1">
                         <label>Telefono</label>
                     </div>
                     <div class="col-10 mt-1">
-                        <input class="form-control" campo="" id="telefono"/>
+                        <input type="text" class="form-control" campo="" id="telefono"/>
                     </div>
                 
                     <div class="col-2 mt-1">
                         <label>Correo E</label>
                     </div>
                     <div class="col-10 mt-1">
-                        <input class="form-control" campo="" id="correoE"/>
+                        <input type="text" class="form-control" campo="" id="correoE"/>
                     </div>                 
                 </div>         
             </div>
@@ -87,7 +87,7 @@
                             <th>Correo E</th>
                         </tr>
                     </thead>
-                    <tbody id="tablaPersonas">
+                    <tbody id="tablaContactos">
                     </tbody>
                 </table>
             </div>
