--- a/08_MongoDB_Realm/01_Cliente_JS/agenda.html
+++ b/08_MongoDB_Realm/01_Cliente_JS/agenda.html
@@ -40,6 +40,13 @@
             <button class="btn btn-warning mr-1" id="btnVaciar">Vaciar</button>
         </div>
 
+        <div class="alert alert-danger alert-dismissible fade show" role="alert" id="alertError">
+            <strong>Error:</strong> <span id="mensajeError"></span>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+
         <div class="row">
             <div class="col-sm-12 col-lg-8 offset-lg-2"> 
                 <!--$("#formulario [campo]")-->
